--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
         android:layout_height="match_parent">
 
         <Button
+            android:onClick="vaogame"
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginTop="130dp"
@@ -37,7 +38,8 @@
             android:text="Play"
             android:textAllCaps="false"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:ignore="OnClick" />
 
     </RelativeLayout>
 
