--- a/app/src/main/res/layout/activity_choigame.xml
+++ b/app/src/main/res/layout/activity_choigame.xml
@@ -10,6 +10,26 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="50dp">
+   <TextView
+       android:id="@+id/tvcau"
+       android:layout_width="wrap_content"
+       android:layout_height="match_parent"
+       android:layout_marginStart="6dp"
+       android:layout_marginTop="6dp"
+       android:layout_marginEnd="6dp"
+       android:layout_marginBottom="6dp"
+       android:background="@drawable/bg_tien"
+       android:gravity="center"
+       android:minWidth="100dp"
+       android:paddingLeft="10dp"
+       android:paddingRight="10dp"
+       android:text="Cau 1"
+       android:layout_toRightOf="@id/tvdiem"
+      android:layout_toLeftOf="@id/imgbtgoiy"
+       android:textColor="@color/black"
+       android:textSize="20sp"
+       android:textStyle="bold"/>
+
     <TextView
         android:id="@+id/tvdiem"
         android:layout_width="wrap_content"
