--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="150dp">
 
         <ImageView
+            android:onClick="ve"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/logo"
@@ -29,12 +30,12 @@
         android:layout_height="match_parent">
 
         <Button
-            android:onClick="vaogame"
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginTop="130dp"
             android:background="@drawable/btxanh"
             android:gravity="center"
+            android:onClick="vaogame"
             android:text="Play"
             android:textAllCaps="false"
             android:textSize="20sp"
