--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,19 +26,49 @@
     <RelativeLayout
         android:layout_marginTop="50dp"
         android:layout_width="match_parent"
-        android:gravity="center|bottom"
+        android:gravity="center"
         android:layout_height="350dp">
 
         <Button
             android:id="@+id/nut"
             android:layout_width="200dp"
             android:layout_height="60dp"
-            android:layout_marginTop="170dp"
+            android:layout_marginTop="100dp"
             android:background="@drawable/btxanh"
             android:backgroundTint="#00BCD4"
             android:gravity="center"
             android:onClick="vaogame"
             android:text="Play"
+            android:textAllCaps="false"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:ignore="OnClick" />
+        <Button
+            android:id="@+id/nut2"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/btxanh"
+            android:backgroundTint="#00BCD4"
+            android:gravity="center"
+            android:layout_below="@id/nut"
+            android:onClick="vaosieutoc"
+            android:text="sieu toc"
+            android:textAllCaps="false"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:ignore="OnClick" />
+        <Button
+            android:id="@+id/nut3"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/btxanh"
+            android:backgroundTint="#00BCD4"
+            android:gravity="center"
+            android:layout_below="@id/nut2"
+            android:onClick="thoat"
+            android:text="Thoat"
             android:textAllCaps="false"
             android:textSize="20sp"
             android:textStyle="bold"
